--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,4 +4,4 @@
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 <!-- <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" /> -->
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-<script src='http://code.jquery.com/jquery-1.11.1.js'></script>
+<script src='https://code.jquery.com/jquery-1.11.1.js'></script>
