--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -4,11 +4,8 @@
   <% include ../partials/header.ejs %>
   <link rel="stylesheet" type="text/css" href="/stylesheets/iv.css" />
 </head>
-
 <body>
-  <div id='targetArea' onmousedown='getCoords(event)'></div>
-      <div class='filebutton'><input type='file' id='imagefile' accept='image/*' capture='camera'></div>  
-</body>
-<script src="/js/iv.js"></script>
-
+    <div id='img-container'></div>
+</body>   
+    <script src="/js/iv.js"></script>
 </html>
