--- a/public/stylesheets/iv.css
+++ b/public/stylesheets/iv.css
@@ -2,29 +2,32 @@
 IV CSS File
 */
 
-body {
-    background-color: #C8C8C8;
+/* 'height' needs to be 'auto' for this div */
+#img-container {
+    width: 60%;
+    height: auto;
 }
 
-#container {
-    width: 50%;
-}
-
+/* 
+    this is the styling of the 'tap' 
+    feel free to make changes
+*/
 #finger {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border-radius: 100%;
-    background-color: dodgerblue;
     opacity: 0.8;
     position: absolute;
 }
 
-#image {
-    width:100%;
-    height:auto;
+/* DO NOT CHANGE ANYTHING */
+img {
+    width: 100%;
+    height: auto;
 }
 
-#imagefile {
+/* DO NOT CHANGE ANYTHING */
+#imageFile {
 	width: 0.1px;
 	height: 0.1px;
 	opacity: 0;
