--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -24,9 +24,9 @@
             <div class="description_type">
                 Alteration
                 </br>
-                <button class="description downarrow"></button>
-                <button class="description neutralarrow"></button>
-                <button class="description uparrow"></button>
+                <button id="alterationdown" class="description downarrow"></button>
+                <button id="alterationneutral" class="description neutralarrow"></button>
+                <button id="alterationup" class="description uparrow"></button>
             </div>
 
             <div class="description_type">
@@ -52,9 +52,9 @@
             <div class="description_type">
                 Friability
                 </br>
-                <button class="description downarrow"></button>
-                <button class="description neutralarrow"></button>
-                <button class="description uparrow"></button>
+                <button id="friabilitydown" class="description downarrow"></button>
+                <button id="friabilityneutral" class="description neutralarrow"></button>
+                <button id="friabilityup" class="description uparrow"></button>
             </div>
 
             <div class="description_type">
@@ -89,9 +89,9 @@
             <div class="description_type">
                 Weathering
                 </br>
-                <button class="description downarrow"></button>
-                <button class="description neutralarrow"></button>
-                <button class="description uparrow"></button>
+                <button id="weatheringdown" class="description downarrow"></button>
+                <button id="weatheringneutral" class="description neutralarrow"></button>
+                <button id="weatheringup" class="description uparrow"></button>
             </div>
 
             <div id="notes">
