--- a/public/stylesheets/iv.scss
+++ b/public/stylesheets/iv.scss
@@ -122,7 +122,7 @@ img {
     width: 60px;
     height: 60px;
     margin: 5px;
-    border: white 0px;
+    border: thin solid white;
     
     float: left;
 }
