Added the single selection feature on descriptions don't make sense to have more than one answer.

--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -21,7 +21,7 @@
 
         <div id="column2">
 
-            <div class="description_type">
+            <div id="alteration" class="description_type">
                 Alteration
                 </br>
                 <button id="alterationdown" class="description downarrow"></button>
@@ -29,7 +29,7 @@
                 <button id="alterationup" class="description uparrow"></button>
             </div>
 
-            <div class="description_type">
+            <div id="color" class="description_type">
                 Color
                 </br>
                 <button id=red class=description></button>
@@ -42,14 +42,14 @@
                 <button id=white class=description></button>
             </div>
 
-            <div class="description_type">
+            <div id="gradient" class="description_type">
                 Gradient
                 </br>
                 <button id=pervasive class=description></button>
                 <button id=superficial class=description></button>
             </div>
 
-            <div class="description_type">
+            <div id="friability" class="description_type">
                 Friability
                 </br>
                 <button id="friabilitydown" class="description downarrow"></button>
@@ -57,7 +57,7 @@
                 <button id="friabilityup" class="description uparrow"></button>
             </div>
 
-            <div class="description_type">
+            <div id="presenceof" class="description_type">
                 Presence of
                 </br>
                 <button id=water class=description></button>
@@ -66,7 +66,7 @@
                 <button id=dangerousterrain class=description></button>
             </div>
 
-            <div class="description_type">
+            <div id="surfacecondition" class="description_type">
                 Surface condition
                 </br>
                 <button id=intact class=description></button>
@@ -75,7 +75,7 @@
                 <button id=rough class=description></button>
             </div>
 
-            <div class="description_type">
+            <div id="texture" class="description_type">
                 Texture
                 </br>
                 <button id=porphyritic class=description></button>
@@ -86,7 +86,7 @@
                 <button id=scoriaceous class=description></button>
             </div>
 
-            <div class="description_type">
+            <div id="weathering" class="description_type">
                 Weathering
                 </br>
                 <button id="weatheringdown" class="description downarrow"></button>
