Fixed the file extention again for the asset rendering issue.

--- a/public/stylesheets/iv.scss
+++ b/public/stylesheets/iv.scss
@@ -128,52 +128,52 @@ img {
 }
 
 .downarrow {
-    background-image: url(../assets/arrowdown.PNG);
+    background-image: url(../assets/arrowdown.png);
 }
 .uparrow {
-    background-image: url(../assets/arrowup.PNG);
+    background-image: url(../assets/arrowup.png);
 }
 .neutralarrow {
-    background-image: url(../assets/arrowneutral.PNG);
+    background-image: url(../assets/arrowneutral.png);
 }
 
 #red {
-    background-image: url(../assets/red.PNG);
+    background-image: url(../assets/red.png);
 }
 #brown {
-    background-image: url(../assets/brown.PNG);
+    background-image: url(../assets/brown.png);
 }
 #orange {
-    background-image: url(../assets/orange.PNG);
+    background-image: url(../assets/orange.png);
 }
 #yellow {
-    background-image: url(../assets/yellow.PNG);
+    background-image: url(../assets/yellow.png);
 }
 #purple {
-    background-image: url(../assets/purple.PNG);
+    background-image: url(../assets/purple.png);
 }
 #darkgray {
-    background-image: url(../assets/darkgray.PNG);
+    background-image: url(../assets/darkgray.png);
 }
 #black {
-    background-image: url(../assets/black.PNG);
+    background-image: url(../assets/black.png);
 }
 #white {
-    background-image: url(../assets/white.PNG);
+    background-image: url(../assets/white.png);
 }
 
 #pervasive {
-    background-image: url(../assets/pervasive.PNG);
+    background-image: url(../assets/pervasive.png);
 }
 #superficial {
     background-image: url(../assets/superficial.png);
 }
 
 #water {
-    background-image: url(../assets/water.PNG);
+    background-image: url(../assets/water.png);
 }
 #plantbiomass {
-    background-image: url(../assets/plantbiomass.PNG);
+    background-image: url(../assets/plantbiomass.png);
 }
 #animalbiomass {
     background-image: url(../assets/animalbiomass.png);
