--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -8,7 +8,19 @@
     
 <body>
     <div id="navbar">
-            Nav bar coming soon to a div near you    
+        
+        <select class="dropdown">
+            <option class="option">Sample Location 1</option>
+        </select>   
+        
+        <select class="dropdown">
+            <option class="option">Photo 1</option>
+        </select>
+                
+        <p id="samplethis">Suggest to sample?</p>
+        <input type="radio" class="radiobutton">Yes
+        <input type="radio" class="radiobutton">No
+        
     </div>
         
     <div id="body">
