--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -32,7 +32,7 @@
         </div>
 
         <div id="column2">
-
+            <div id="description_container">
             <div id="alteration" class="description_type">
                 Alteration
                 </br>
@@ -105,12 +105,11 @@
                 <button id="weatheringneutral" class="description neutralarrow"></button>
                 <button id="weatheringup" class="description uparrow"></button>
             </div>
-
-            <div id="notes">
-                Notes:
-                </br></br>
-                <textarea id="notes_field" rows="4"></textarea>
             </div>
+
+            <textarea id="notes_field" rows="2" placeholder="Notes"></textarea>
+
+            <button id='submit'>Submit</button>
         </div>
 
     </div>
