--- a/public/stylesheets/iv.css
+++ b/public/stylesheets/iv.css
@@ -28,10 +28,11 @@ img {
 
 #navbar {
   background-color: gainsboro;
-  height: 60px;
+  height: 50px;
   width: 100%;
   /*min-width: 1000px;*/
-  font-size: 16pt; }
+  font-size: 16pt;
+  max-width: 2000px; }
 
 .option {
   font-size: 16pt;
@@ -54,6 +55,7 @@ select {
   background-color: chartreuse;
   height: 900px;
   width: 100%;
+  max-width: 2000px;
   /*min-width: 1000px;*/ }
 
 #column1 {
@@ -64,7 +66,7 @@ select {
   position: relative; }
 
 #column2 {
-  background-color: coral;
+  background-color: white;
   height: 100%;
   width: 50%;
   float: right; }
@@ -86,9 +88,12 @@ select {
   bottom: 0px;
   font-family: calibri; }
 
+#description_container {
+  height: 80%; }
+
 .description_type {
   background-color: white;
-  height: 20%;
+  height: 25%;
   width: 50%;
   outline: thin solid gray;
   float: left;
@@ -96,18 +101,24 @@ select {
   font-family: calibri;
   position: relative; }
 
-#notes {
-  background-color: gainsboro;
-  padding-top: 10px;
-  width: 100%;
-  height: 17%;
-  float: left;
-  padding: 2%;
-  font-size: 16pt; }
-
 #notes_field {
-  width: 90%;
-  padding: 2%; }
+  width: 96%;
+  padding: 1%;
+  border: 10px solid gainsboro;
+  outline: thin solid gray;
+  font-size: 16pt;
+  font-family: calibri; }
+
+textarea::-webkit-input-placeholder {
+  font-size: 16pt;
+  font-family: calibri;
+  font-style: italic; }
+
+#submit {
+  font-size: 16pt;
+  width: 100%;
+  height: 6%;
+  margin-top: 1%; }
 
 .description {
   background-color: white;
