Changing plant biomass label

--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -119,7 +119,7 @@
                         <span class="description_label">Plant</span>
                     </button>
                     <button id=animalbiomass class="description icon-poop">
-                        <span class="description_label">Poop</span>
+                        <span class="description_label">Plant Biomass</span>
                     </button>
                     <button id=dangerousterrain class="description icon-dangerous-terrain">
                         <span class="description_label">Dangerous Terrain</span>
