Fixing toggle on iv

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -792,13 +792,18 @@ textarea::-webkit-input-placeholder {
   background-position: center center;
   background-repeat: no-repeat;
   width: auto;
-  height: 60px;
-  padding: 5px;
+  height: auto;
+  padding: 10px;
   border: thin solid white;
   float: left;
   font-size: 1.5em;
   color: #757575;
   text-align: center; }
+  .description.active {
+    color: #64a66a;
+    border: 1px solid #64a66a; }
+  .description:focus {
+    background-color: white; }
 
 .description_label {
   display: block;
