--- a/resources/assets/app/_iv.scss
+++ b/resources/assets/app/_iv.scss
@@ -176,6 +176,8 @@ textarea::-webkit-input-placeholder {
 
     &:focus {
         background-color: white;
+        color: #64a66a;
+        outline: none;
     }
 }
 
