--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -8,10 +8,14 @@
         <div id='container'>
             <div id='controls'>
                 <div id='buttons'>
-                    <button id='photo'>New Photo</button>    
-                    <button id='pin'>Pin</button>
-                    <button id='draw'>Draw</button>
-                    <button id='clear'>Clear</button>
+<!--                    <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>-->
+                    <input id='pin' type='image' height='60px' width='auto' src='/assets/blue-circle.png'>
+                    <input id='draw' type='image' height='60px' width='auto' src='/assets/blue-scribble.png'>
+<!--
+                    <button id='undo'>Undo</button>
+                    <button id='redo'>Redo</button>
+-->
+
                 </div>
             </div>
             <canvas id='canvas'></canvas>   
@@ -32,5 +36,5 @@
         <input type='file' id='img-file' accept='image/*' capture='camera'>
         <label id='label' for='img-file' for='new'></label>
     </body>
-    <script src="/js/ev.js"></script>
+    <script src="/js/iv.js"></script>
 </html>
