--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -8,14 +8,24 @@
         <div id='container'>
             <div id='controls'>
                 <div id='buttons'>
-                    <button id='photo'>New Photo</button>    
-                    <button id='pin'>Pin</button>
-                    <button id='draw'>Draw</button>
-                    <button id='clear'>Clear</button>
+                    <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
+                    <input id='pin' type='image' height='60px' width='auto' src='/assets/yellow-circle.png'>
+                    <input id='draw' type='image' height='60px' width='auto' src='/assets/yellow-scribble.png'>
+                    <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
+                    
+<!--
+                    <button id='undo'>Undo</button>
+                    <button id='redo'>Redo</button>
+-->
+
                 </div>
+                
             </div>
             <canvas id='canvas'></canvas>   
         </div>
+        
+
+        
         <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
           <defs>
               <style>.cls-1,.cls-2{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:4px;}.cls-1{stroke-linecap:round;}.cls-3{font-size:12px;font-family:Open Sans;}</style>
