undo is 95% working

--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -13,10 +13,10 @@
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/yellow-scribble.png'>
                     <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
                     
-<!--
+
                     <button id='undo'>Undo</button>
-                    <button id='redo'>Redo</button>
--->
+<!--                    <button id='redo'>Redo</button>-->
+
 
                 </div>
                 
