--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -11,10 +11,10 @@
 <!--                    <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>-->
                     <input id='pin' type='image' height='60px' width='auto' src='/assets/blue-circle.png'>
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/blue-scribble.png'>
-<!--
+
                     <button id='undo'>Undo</button>
-                    <button id='redo'>Redo</button>
--->
+<!--                    <button id='redo'>Redo</button>-->
+
 
                 </div>
             </div>
