--- a/public/stylesheets/ev.css
+++ b/public/stylesheets/ev.css
@@ -56,6 +56,7 @@ EV CSS File
     display: inline-block;
 }
 
+/*
 #pin {
     margin-top: 125px;
 }
@@ -67,6 +68,7 @@ EV CSS File
 #clear {
     margin-top: 125px;
 }
+*/
 
 
 /*
