--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -9,12 +9,15 @@
             <div id='controls'>
                 <div id='buttons'>
                     <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
+                    
                     <input id='pin' type='image' height='60px' width='auto' src='/assets/yellow-circle.png'>
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/yellow-scribble.png'>
+                    
+                    <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
+
                     <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
                     
 
-                    <button id='undo'>Undo</button>
 <!--                    <button id='redo'>Redo</button>-->
 
 
