--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -11,9 +11,10 @@
 <!--                    <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>-->
                     <input id='pin' type='image' height='60px' width='auto' src='/assets/blue-circle.png'>
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/blue-scribble.png'>
-
-                    <button id='undo'>Undo</button>
-<!--                    <button id='redo'>Redo</button>-->
+                    <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
+                    
+                    
+                    <!--                    <button id='redo'>Redo</button>-->
 
 
                 </div>
