circles to pins and redraw on resize

--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -10,7 +10,7 @@
                 <div id='buttons'>
                     <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
                     
-                    <input id='pin' type='image' height='60px' width='auto' src='/assets/yellow-circle.png'>
+                    <input id='pin' type='image' height='60px' width='auto' src='/assets/yellow-pin.png'>
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/yellow-scribble.png'>
                     
                     <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
