--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -9,7 +9,7 @@
             <div id='controls'>
                 <div id='buttons'>
 <!--                    <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>-->
-                    <input id='pin' type='image' height='60px' width='auto' src='/assets/blue-circle.png'>
+                    <input id='pin' type='image' height='60px' width='auto' src='/assets/blue-pin.png'>
                     <input id='draw' type='image' height='60px' width='auto' src='/assets/blue-scribble.png'>
                     <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
                     
