--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,5 +3,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 <!-- <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" /> -->
-<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+<script src='https://cdn.socket.io/socket.io-1.4.5.js'></script>
 <script src='https://code.jquery.com/jquery-1.11.1.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.js'></script>
