--- a/views/pages/iv.ejs
+++ b/views/pages/iv.ejs
@@ -20,6 +20,9 @@
                 </div>
             </div>
             <canvas id='canvas'></canvas>   
+                    
+            <div class='loading hidden'>Incoming image</div>
+
         </div>
         <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
           <defs>
