--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -16,7 +16,10 @@
                 <!--<button id='redo'>Redo</button>-->
                 </div>
             </div>
-            <canvas id='canvas'></canvas>   
+            <canvas id='canvas'></canvas>
+            
+            <div class='loading hidden'>Sending to IV</div>
+            
         </div>
         <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
           <defs>
