cleaned code, iv/ev slection at beginning for easier dev

--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -5,6 +5,12 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/ev.css" />
     </head>
     <body>
+        <div id='selection-container'>
+                <div id='selection'>
+                    <button id='ev'>EV</button>
+                    <button id='iv'>IV</button>
+                </div>
+            </div>
         <div id='container'>
             <div id='controls'>
                 <div id='buttons'>
@@ -16,9 +22,7 @@
                 </div>
             </div>
             <canvas id='canvas'></canvas>
-            
-            <div class='loading hidden'>Sending to IV</div>
-            
+            <div class='loading hidden'><p>sending photo</p></div>
         </div>
         <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
           <defs>
