--- a/public/stylesheets/ev.css
+++ b/public/stylesheets/ev.css
@@ -6,6 +6,7 @@ stylesheet
     width: auto;
     height: 100vh;
     padding: 5px;
+    display: none;
 }
 
 .controls-landscape {
@@ -46,22 +47,6 @@ stylesheet
     text-align: center;
 }
 
-
-.first {
-    display: block;
-}
-
-.second {
-    display: block;
-}
-
-.third {
-    display: block;
-    position: absolute;
-    bottom: 0;
-}
-
-
 .buttons-landscape {
     margin: 10px auto;
     display: block;
@@ -99,6 +84,29 @@ stylesheet
 .background {     
     -webkit-filter: blur(5px);     
     filter: blur(5px);      
+}
+
+#selection-container {
+    z-index: 1;
+    height: 100vh;
+    width: auto;
+}
+
+#selection {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#selection > button {
+    width: 100%;
+    height: 100%;
+    margin: 5px auto;
 }
 
 /* camera button styling only */
